--- a/carga.ipynb
+++ b/carga.ipynb
@@ -41,10 +41,11 @@
     "# Import the csv module\n",
     "import csv\n",
     "import sqlite3\n",
-    "import pandas as pd # Para trabajar con dataframes\n",
-    "import numpy as np # Para trabajar con matrices\n",
-    "import matplotlib.pyplot as plt # Para trabajar con gráficos\n",
-    "import seaborn as sns # Para trabajar con gráficos"
+    "import pandas as pd  # Para trabajar con dataframes\n",
+    "import numpy as np  # Para trabajar con matrices\n",
+    "import matplotlib.pyplot as plt  # Para trabajar con gráficos\n",
+    "import seaborn as sns  # Para trabajar con gráficos\n",
+    "\n"
    ]
   },
   {
@@ -54,11 +55,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Carga y resúmen de datos \n",
-    "datos = pd.read_csv('/workspace/data/1900_2021_DISASTERS.csv') # Cargar datos\n",
+    "# Carga y resúmen de datos\n",
+    "datos = pd.read_csv(\"/workspace/data/1900_2021_DISASTERS.csv\")  # Cargar datos\n",
     "# copy() para no modificar el original\n",
-    "df = datos.copy()# Create a database in RAM\n",
-    "conn = sqlite3.connect(':memory:')"
+    "df = datos.copy()  # Create a database in RAM\n",
+    "conn = sqlite3.connect(\":memory:\")"
    ]
   },
   {
@@ -86,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
